force-app/main/default/objects/Ordonnance__c/Ordonnance__c.object-meta.xml
<CustomObject>
    <label>Ordonnance</label>
    <nameField>
        <label>Numero</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ordonnances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>