force-app/main/default/objects/Ordonnance__c/fields/A_finir__c.field-meta.xml
<CustomField>
    <fullName>A_finir__c</fullName>
    <formula>OR( RecordType.DeveloperName =&quot;Brouillon_finition&quot;, RecordType.DeveloperName =&quot;Valid_e_finition&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A finir</label>
    <type>Checkbox</type>
</CustomField>