force-app/main/default/objects/Ordonnance__c/fields/A_refaire__c.field-meta.xml
<CustomField>
    <fullName>A_refaire__c</fullName>
    <formula>OR(RecordType.DeveloperName =&quot;Brouillon_refaire&quot;,RecordType.DeveloperName =&quot;Valid_e_refaire&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A refaire</label>
    <type>Checkbox</type>
</CustomField>