force-app/main/default/objects/Ordonnance__c/fields/Bandeau_m_tallique__c.field-meta.xml
<CustomField>
    <fullName>Bandeau_m_tallique__c</fullName>
    <label>Bandeau métallique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avec Bandeau métallique</fullName>
            </value>
            <value>
                <fullName>Sans Bandeau métallique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>