force-app/main/default/objects/Ordonnance__c/fields/Categorie__c.field-meta.xml
<CustomField>
    <fullName>Categorie__c</fullName>
    <formula>IF(NbLignes__c &gt;0,CASE( NbLignes__c ,NbESTHETIQUES__c,&quot;ESTHETIQUES&quot;,NbGOUTTIERES__c,&quot;GOUTTIERES&quot;,NbIC_COURONNES__c,&quot;IC COURONNES&quot;,NbIMPLANTS__c,&quot;IMPLANTS&quot;,NbORTHO__c,&quot;ORTHO&quot;,NbPEI_CIRE__c,&quot;PEI_CIRE&quot;,NbREPARATIONS__c,&quot;REPARATIONS&quot;,NbRESINES__c,&quot;RESINES&quot;,NbSTELLITES__c,&quot;STELLITES&quot;,&quot;MIXTE&quot;),&quot;&quot;)</formula>
    <label>Catégorie</label>
    <type>Text</type>
</CustomField>