force-app/main/default/objects/Ordonnance__c/fields/Centre__c.field-meta.xml
<CustomField>
    <fullName>Centre__c</fullName>
    <formula>Owner:User.Contact.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centre</label>
    <type>Text</type>
</CustomField>