force-app/main/default/objects/Ordonnance__c/fields/Choice_of_rating__c.field-meta.xml
<CustomField>
    <fullName>Choice_of_rating__c</fullName>
    <label>Choice of rating</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adaptation</fullName>
            </value>
            <value>
                <fullName>Teinte</fullName>
            </value>
            <value>
                <fullName>Occlusion</fullName>
            </value>
            <value>
                <fullName>Esthétique</fullName>
            </value>
            <value>
                <fullName>Délai non respecté</fullName>
            </value>
            <value>
                <fullName>Instruction non prise en compte</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>