force-app/main/default/objects/Ordonnance__c/fields/Choice_of_rating_other__c.field-meta.xml
<CustomField>
    <fullName>Choice_of_rating_other__c</fullName>
    <label>Choice of rating other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>