force-app/main/default/objects/Ordonnance__c/fields/Cloner__c.field-meta.xml
<CustomField>
    <fullName>Cloner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloner</label>
    <type>Checkbox</type>
</CustomField>