force-app/main/default/objects/Ordonnance__c/fields/Commande_initiale__c.field-meta.xml
<CustomField>
    <fullName>Commande_initiale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande initiale</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Ordonnances (Commande initiale)</relationshipLabel>
    <relationshipName>Ordonnances1</relationshipName>
    <type>Lookup</type>
</CustomField>