force-app/main/default/objects/Ordonnance__c/fields/Commentaires_de_finition__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_de_finition__c</fullName>
    <label>Commentaires de finition</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>