force-app/main/default/objects/Ordonnance__c/fields/Complexe__c.field-meta.xml
<CustomField>
    <fullName>Complexe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complexe</label>
    <type>Checkbox</type>
</CustomField>