force-app/main/default/objects/Ordonnance__c/fields/Couleur_de_r_sine__c.field-meta.xml
<CustomField>
    <fullName>Couleur_de_r_sine__c</fullName>
    <label>Couleur de résine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resine Tcs Clear</fullName>
            </value>
            <value>
                <fullName>Resine Tcs Transparent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>