force-app/main/default/objects/Ordonnance__c/fields/CreeePar__c.field-meta.xml
<CustomField>
    <fullName>CreeePar__c</fullName>
    <formula>&quot;Dr. &quot; +  CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreeePar</label>
    <type>Text</type>
</CustomField>