force-app/main/default/objects/Ordonnance__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date de livraison souhaitée</label>
    <type>Date</type>
</CustomField>