force-app/main/default/objects/Ordonnance__c/fields/Date_classique__c.field-meta.xml
<CustomField>
    <fullName>Date_classique__c</fullName>
    <label>Date classique</label>
    <type>Date</type>
</CustomField>