force-app/main/default/objects/Ordonnance__c/fields/Date_complexe__c.field-meta.xml
<CustomField>
    <fullName>Date_complexe__c</fullName>
    <label>Date complexe</label>
    <type>Date</type>
</CustomField>