force-app/main/default/objects/Ordonnance__c/fields/Date_de_r_ception__c.field-meta.xml
<CustomField>
    <fullName>Date_de_r_ception__c</fullName>
    <label>Date de réception</label>
    <type>Date</type>
</CustomField>