force-app/main/default/objects/Ordonnance__c/fields/Date_pr_visionnelle_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Date_pr_visionnelle_de_livraison__c</fullName>
    <formula>/* IF(Date_previsionnelle__c &gt; IF( Complexe__c , Date_complexe__c , Date_classique__c ),Date_previsionnelle__c,IF( Complexe__c , Date_complexe__c , Date_classique__c )) */

IF( Complexe__c , Date_complexe__c , Date_classique__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date prévisionnelle de livraison</label>
    <type>Date</type>
</CustomField>