force-app/main/default/objects/Ordonnance__c/fields/Date_previsionnelle__c.field-meta.xml
<CustomField>
    <fullName>Date_previsionnelle__c</fullName>
    <description>Sur les lignes uniquement</description>
    <label>Date prévisionnelle</label>
    <summarizedField>Ligne_de_commande__c.Date_previsionnelle__c</summarizedField>
    <summaryForeignKey>Ligne_de_commande__c.Ordonnance__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>