force-app/main/default/objects/Ordonnance__c/fields/DateOrderForm__c.field-meta.xml
<CustomField>
    <fullName>DateOrderForm__c</fullName>
    <formula>Dossier__r.DateOrderForm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateOrderForm</label>
    <type>Date</type>
</CustomField>