force-app/main/default/objects/Ordonnance__c/fields/Dents_Inlay_core__c.field-meta.xml
<CustomField>
    <fullName>Dents_Inlay_core__c</fullName>
    <label>Dents Inlay core</label>
    <length>255</length>
    <type>Text</type>
</CustomField>