force-app/main/default/objects/Ordonnance__c/fields/Description_Etape_suivante__c.field-meta.xml
<CustomField>
    <fullName>Description_Etape_suivante__c</fullName>
    <label>Description Etape suivante</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>