force-app/main/default/objects/Ordonnance__c/fields/Description_finition__c.field-meta.xml
<CustomField>
    <fullName>Description_finition__c</fullName>
    <label>Description finition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>