force-app/main/default/objects/Ordonnance__c/fields/Empreinte_numerique__c.field-meta.xml
<CustomField>
    <fullName>Empreinte_numerique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Empreinte numerique</label>
    <type>Checkbox</type>
</CustomField>