force-app/main/default/objects/Ordonnance__c/fields/Etape_suivante__c.field-meta.xml
<CustomField>
    <fullName>Etape_suivante__c</fullName>
    <label>Créer l&apos;ordonnance pour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>l&apos;étape suivante</fullName>
            </value>
            <value>
                <fullName>la finition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>