force-app/main/default/objects/Ordonnance__c/fields/Files_to_be_archived__c.field-meta.xml
<CustomField>
    <fullName>Files_to_be_archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox to send files to AWS</description>
    <label>Files to be archived</label>
    <type>Checkbox</type>
</CustomField>