force-app/main/default/objects/Ordonnance__c/fields/Finir__c.field-meta.xml
<CustomField>
    <fullName>Finir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminer / étape suivante</label>
    <type>Checkbox</type>
</CustomField>