force-app/main/default/objects/Ordonnance__c/fields/Finition_1__c.field-meta.xml
<CustomField>
    <fullName>Finition_1__c</fullName>
    <label>Finition (1)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Finition</valueSetName>
    </valueSet>
</CustomField>