force-app/main/default/objects/Ordonnance__c/fields/Finition_suivante_1__c.field-meta.xml
<CustomField>
    <fullName>Finition_suivante_1__c</fullName>
    <label>Finition suivante (1)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Finition_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Finition</valueSetName>
    </valueSet>
</CustomField>