force-app/main/default/objects/Ordonnance__c/fields/Generer__c.field-meta.xml
<CustomField>
    <fullName>Generer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Générer le dossier</label>
    <type>Checkbox</type>
</CustomField>