force-app/main/default/objects/Ordonnance__c/fields/ID_Patient__c.field-meta.xml
<CustomField>
    <fullName>ID_Patient__c</fullName>
    <label>ID Patient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>