force-app/main/default/objects/Ordonnance__c/fields/ImageNumerique__c.field-meta.xml
<CustomField>
    <fullName>ImageNumerique__c</fullName>
    <formula>IMAGE(If( Empreinte_numerique__c ,&quot;https://numerident--c.eu17.visual.force.com/resource/1567690282000/ImageNumerique&quot;,&quot;&quot;),&quot;&quot;,42,74)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>.</label>
    <type>Text</type>
</CustomField>