force-app/main/default/objects/Ordonnance__c/fields/Je_certifie__c.field-meta.xml
<CustomField>
    <fullName>Je_certifie__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Je certifie</label>
    <type>Text</type>
</CustomField>