force-app/main/default/objects/Ordonnance__c/fields/Je_valide_cette_commande_pour_envoi__c.field-meta.xml
<CustomField>
    <fullName>Je_valide_cette_commande_pour_envoi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Empreintes certifiées décontaminées</label>
    <type>Checkbox</type>
</CustomField>