force-app/main/default/objects/Ordonnance__c/fields/Maquillage__c.field-meta.xml
<CustomField>
    <fullName>Maquillage__c</fullName>
    <label>Maquillage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pas de maquillage</fullName>
            </value>
            <value>
                <fullName>Maquillage saturé</fullName>
            </value>
            <value>
                <fullName>Maquillage Doux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>