force-app/main/default/objects/Ordonnance__c/fields/Maquillage_sillon__c.field-meta.xml
<CustomField>
    <fullName>Maquillage_sillon__c</fullName>
    <label>Maquillage sillon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sillons maquillés</fullName>
            </value>
            <value>
                <fullName>Sillons non maquillés</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>