force-app/main/default/objects/Ordonnance__c/fields/Mode_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_livraison__c</fullName>
    <formula>TEXT(Dossier__r.Mode_de_livraison__c)</formula>
    <label>Mode de livraison</label>
    <type>Text</type>
</CustomField>