force-app/main/default/objects/Ordonnance__c/fields/Motif_de_refection__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_refection__c</fullName>
    <label>Motif de réfection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Occlusion</fullName>
            </value>
            <value>
                <fullName>Teinte</fullName>
            </value>
            <value>
                <fullName>Adaptation</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>