force-app/main/default/objects/Ordonnance__c/fields/Motif_detaille__c.field-meta.xml
<CustomField>
    <fullName>Motif_detaille__c</fullName>
    <label>Motif détaillé</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>