force-app/main/default/objects/Ordonnance__c/fields/Nb_de_produits__c.field-meta.xml
<CustomField>
    <fullName>Nb_de_produits__c</fullName>
    <label>Nb de produits</label>
    <summarizedField>Ligne_de_commande__c.Quantite__c</summarizedField>
    <summaryForeignKey>Ligne_de_commande__c.Ordonnance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>