force-app/main/default/objects/Ordonnance__c/fields/NbESTHETIQUES__c.field-meta.xml
<CustomField>
    <fullName>NbESTHETIQUES__c</fullName>
    <label>NbESTHETIQUES</label>
    <summaryFilterItems>
        <field>Ligne_de_commande__c.Categorie__c</field>
        <operation>equals</operation>
        <value>ESTHETIQUES</value>
    </summaryFilterItems>
    <summaryForeignKey>Ligne_de_commande__c.Ordonnance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>