force-app/main/default/objects/Ordonnance__c/fields/NbLignes__c.field-meta.xml
<CustomField>
    <fullName>NbLignes__c</fullName>
    <label>NbLignes</label>
    <summaryForeignKey>Ligne_de_commande__c.Ordonnance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>