force-app/main/default/objects/Ordonnance__c/fields/NbPEI_CIRE__c.field-meta.xml
<CustomField>
    <fullName>NbPEI_CIRE__c</fullName>
    <label>NbPEI/CIRE</label>
    <summaryFilterItems>
        <field>Ligne_de_commande__c.Categorie__c</field>
        <operation>equals</operation>
        <value>PEI/CIRE</value>
    </summaryFilterItems>
    <summaryForeignKey>Ligne_de_commande__c.Ordonnance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>