force-app/main/default/objects/Ordonnance__c/fields/NumeroAuto__c.field-meta.xml
<CustomField>
    <fullName>NumeroAuto__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>NumeroAuto</label>
    <type>AutoNumber</type>
</CustomField>