force-app/main/default/objects/Ordonnance__c/fields/NumeroUnique__c.field-meta.xml
<CustomField>
    <fullName>NumeroUnique__c</fullName>
    <formula>IF(ISBLANK(Ordonnance_pr_c_dente__c), 
	NumeroAuto__c ,
	IF( ISBLANK(Ordonnance_pr_c_dente__r.Ordonnance_pr_c_dente__c), 
		Ordonnance_pr_c_dente__r.NumeroAuto__c ,
		IF( ISBLANK(Ordonnance_pr_c_dente__r.Ordonnance_pr_c_dente__r.Ordonnance_pr_c_dente__c), 
			Ordonnance_pr_c_dente__r.Ordonnance_pr_c_dente__r.NumeroAuto__c ,
			IF( ISBLANK(Ordonnance_pr_c_dente__r.Ordonnance_pr_c_dente__r.Ordonnance_pr_c_dente__r.Ordonnance_pr_c_dente__c), 
				Ordonnance_pr_c_dente__r.Ordonnance_pr_c_dente__r.Ordonnance_pr_c_dente__r.NumeroAuto__c ,
				Ordonnance_pr_c_dente__r.Ordonnance_pr_c_dente__r.Ordonnance_pr_c_dente__r.Ordonnance_pr_c_dente__r.NumeroAuto__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NumeroUnique</label>
    <type>Text</type>
</CustomField>