force-app/main/default/objects/Ordonnance__c/fields/Occlusion__c.field-meta.xml
<CustomField>
    <fullName>Occlusion__c</fullName>
    <label>Occlusion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Occlusion normal</fullName>
            </value>
            <value>
                <fullName>Occlusion légère</fullName>
            </value>
            <value>
                <fullName>Sous-occlusion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>