force-app/main/default/objects/Ordonnance__c/fields/Ordonnance_pr_c_dente__c.field-meta.xml
<CustomField>
    <fullName>Ordonnance_pr_c_dente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordonnance précédente</label>
    <referenceTo>Ordonnance__c</referenceTo>
    <relationshipLabel>Ordonnances</relationshipLabel>
    <relationshipName>Ordonnances</relationshipName>
    <type>Lookup</type>
</CustomField>