force-app/main/default/objects/Ordonnance__c/fields/PartageUsine__c.field-meta.xml
<CustomField>
    <fullName>PartageUsine__c</fullName>
    <label>PartageUsine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>