force-app/main/default/objects/Ordonnance__c/fields/Point_de_contact__c.field-meta.xml
<CustomField>
    <fullName>Point_de_contact__c</fullName>
    <label>Point de contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Point de contact fort</fullName>
            </value>
            <value>
                <fullName>Point de contact normal</fullName>
            </value>
            <value>
                <fullName>Point de contact légers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>