force-app/main/default/objects/Ordonnance__c/fields/Prefixe__c.field-meta.xml
<CustomField>
    <fullName>Prefixe__c</fullName>
    <formula>LEFT(Name,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prefixe</label>
    <type>Text</type>
</CustomField>