force-app/main/default/objects/Ordonnance__c/fields/Refs_Inlay_Core__c.field-meta.xml
<CustomField>
    <fullName>Refs_Inlay_Core__c</fullName>
    <formula>TEXT(X11__c) + &quot; &quot; + TEXT(X12__c)  + &quot; &quot; + TEXT(X13__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refs Inlay Core</label>
    <type>Text</type>
</CustomField>