force-app/main/default/objects/Ordonnance__c/fields/Sexe__c.field-meta.xml
<CustomField>
    <fullName>Sexe__c</fullName>
    <label>Sexe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Homme</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Femme</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>