force-app/main/default/objects/Ordonnance__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brouillon</fullName>
                <default>true</default>
                <label>Brouillon</label>
            </value>
            <value>
                <fullName>Validée</fullName>
            </value>
            <value>
                <fullName>Envoyée au labo</fullName>
            </value>
            <value>
                <fullName>En cours de traitement</fullName>
            </value>
            <value>
                <fullName>En cours de fabrication</fullName>
            </value>
            <value>
                <fullName>En cours de vérification</fullName>
            </value>
            <value>
                <fullName>Expédiée</fullName>
            </value>
            <value>
                <fullName>Reçue</fullName>
            </value>
            <value>
                <fullName>Rejetée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>