force-app/main/default/objects/Ordonnance__c/fields/Statut_du_dossier__c.field-meta.xml
<CustomField>
    <fullName>Statut_du_dossier__c</fullName>
    <formula>TEXT(Dossier__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut du dossier</label>
    <type>Text</type>
</CustomField>