force-app/main/default/objects/Ordonnance__c/fields/Suffixe__c.field-meta.xml
<CustomField>
    <fullName>Suffixe__c</fullName>
    <formula>RIGHT(Name,LEN(Name)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suffixe</label>
    <type>Text</type>
</CustomField>