force-app/main/default/objects/Ordonnance__c/fields/Teinte_haut__c.field-meta.xml
<CustomField>
    <fullName>Teinte_haut__c</fullName>
    <label>Teinte - collet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Teinte</valueSetName>
    </valueSet>
</CustomField>