force-app/main/default/objects/Ordonnance__c/fields/Travail_1__c.field-meta.xml
<CustomField>
    <fullName>Travail_1__c</fullName>
    <label>Travail (1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>