force-app/main/default/objects/Ordonnance__c/fields/Travail_2__c.field-meta.xml
<CustomField>
    <fullName>Travail_2__c</fullName>
    <label>Travail (2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>