force-app/main/default/objects/Ordonnance__c/fields/Travail_r_parer_refaire__c.field-meta.xml
<CustomField>
    <fullName>Travail_r_parer_refaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travail à réparer/refaire</label>
    <type>Checkbox</type>
</CustomField>