force-app/main/default/objects/Ordonnance__c/fields/Travail_URGENT__c.field-meta.xml
<CustomField>
    <fullName>Travail_URGENT__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sous réserve de faisabilité</inlineHelpText>
    <label>Travail URGENT</label>
    <type>Checkbox</type>
</CustomField>