force-app/main/default/objects/Ordonnance__c/fields/Type_de_commande__c.field-meta.xml
<CustomField>
    <fullName>Type_de_commande__c</fullName>
    <label>Type de commande</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nouvelle commande</fullName>
            </value>
            <value>
                <fullName>Commande Redo</fullName>
            </value>
            <value>
                <fullName>Etape suivante ou finition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>