force-app/main/default/objects/Ordonnance__c/fields/Type_de_goutti_re__c.field-meta.xml
<CustomField>
    <fullName>Type_de_goutti_re__c</fullName>
    <label>Type de gouttière</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avec reservoirs</fullName>
            </value>
            <value>
                <fullName>Sans reservoirs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>